Add spinner icon to loading screens.

--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,9 @@
   </head>
   <body ng-app="mapeando">
     <ion-nav-bar class="bar-positive" align-title="center">
+      <ion-nav-back-button>
+        <i class="ion-arrow-left-c"></i> Voltar
+      </ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view></ion-nav-view> 
       <div class="tabs tabs-icon-top">
