--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
     <script src="js/app.js"></script>
     <script src="lib/angular-resource/angular-resource.min.js"></script>
     <script src="js/controllers/home_controller.js"></script>
+    <script src="js/controllers/demands_controller.js"></script>
     <script src="js/factories/demand_factory.js"></script>
 
     <script src="lib/leaflet/dist/leaflet.js"></script>
@@ -43,9 +44,8 @@
 
   </head>
   <body ng-app="mapeando">
-    <ion-nav-bar  align-title="center">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
+    <ion-nav-bar>
+
     </ion-nav-bar>
     <ion-nav-view></ion-nav-view> 
 
