Updates and WIP for the layout

--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
 
   </head>
   <body ng-app="mapeando">
-    <ion-nav-bar>
+    <ion-nav-bar class="bar-energized bar-head">
 
     </ion-nav-bar>
     <ion-nav-view></ion-nav-view> 
